<resources>
    <string name="app_name">SimpleBeerApp</string>
    <string name="title_home">Меню</string>
    <string name="title_dashboard">Избранное</string>
    <string name="title_snacks">Закуски</string>
    <string name="homeFrag_tv">Добро пожаловать в наш BeerApp! Здесь вы сможете найти только лучшее пиво на любой вкус!</string>
    <string name="kozel_info">
    Темное пиво глубокого коричневого цвета с рубиновым отливом. Обладает пышной кремообразной пеной с пузырьками. Имеет мягкий хлебный вкус с нотками жженого солода и карамели, присутствует ненавязчивая сладость.</string>
    <string name="leffe">Бельгийский эль верхового брожжения глубокого темно-коричневого цвета. Аббатский напиток со сливочно-карамельным сладковатым вкусом с нотками обжаренного солода. При вдыхании аромата можно почувствовать оттенки специй, шоколада и сливы</string>
    <string name="goblin">Традиционный рубиновый английский эль из трех сортов солода и хмеля, чистой воды и дрожжей. Во вкусе угадываются нотки поджаренного хмеля и спелых фруктов. Финиш насыщенный, с уравновешенной горчинкой.</string>
    <string name="cider">Cider</string>
    <string name="ipa">IPA</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="august">Светлое фильтрованное «Августинер» обладает характерным соломенным цветом. У него плотная и пышная пенная шапка. Вкус сочетает в себе свежесть, легкость, мягкость и гармоничность. Особо хорошо чувствуются солодовые и хмельные тона, играющие приятной горчинкой. Послевкусие нежное, средней продолжительности.</string>
    <string name="paulaner">Пиво этого бренда является одним из самых популярных во всем мире. Производят его по классическому мюнхенскому рецепту в Баварии. Цвет напитка светлый, слегка мутный и с золотистыми переливами. Вкус приятный и достаточно мягкий, в нем ощущаются элегантные нюансы солода и приятная горчинка. Можно также отметить хорошую сбалансированность напитка.</string>
    <string name="pilsner">Чистое золото – так можно описать цвет этого пива. У него также освежающий вкус, в котором одновременно чувствуется сладкие оттенки солода и яркие травянистые акценты хмеля. Сухое послевкусие средней продолжительности, со свежестью и мягкой горечью.
Аромат богатый и очень приятный. Играет композицией зерна, меда, солода, трав и сосны.</string>
       <string name="everyday">Это классический эль с чистым и ярким вкусом!
14% плотности дают пиву насыщенность и яркий солодовый вкус, а легендарные хмели "Цитра", "Чинук" и "Центенниал"– приятную горечь и интересный аромат!</string>
        <string name="WhiteRabbrit">Пиво светлое пшеничное, нефильтрованное, осветленное, пастеризованное. Сделано в бельгийском стиле.
Крепость составляет 4,8 градусов, напиток темновато-янтарного цвета. Умеренно крепкое пиво, которое хорошо освежает. Неповторимый вкус сформирован сочетанием пшеничных и ячменных солодовых тонов, специальным сортом дрожжей, двумя немецкими сортами хмеля.
</string>
        <string name="inneressence">Пиво сварено в стиле Smoothie Sour Ale, с насыщенным ягодно-фруктовым вкусом, который достигается за счёт добавления пюре ежевики, яблока, ананаса и маракуйи. Этот эль не так прост, как кажется, поэтому раскрыть его истинную сущность подвластно лишь самым проницаемым.
</string>
    <string name="no_filter">No filter</string>
    <string name="favourite">Favourite</string>
    <string name="price">Price</string>
    <string name="title">Title</string>
    <string name="noFavBeer">У вас ещё нет любимого пива Пожалуйста выберите любимое пиво в меню!</string>
    <string name="unsuccessful_call">Не удалось загрузить список закусок, попробовать еще раз?</string>


</resources>

