<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/homeFrag_tv"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerBeerList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_home">

        <RadioButton
            android:id="@+id/rbNoFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_filter"
            android:checked="true"
            app:layout_constraintEnd_toStartOf="@id/rb2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_home" />

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark"
            app:layout_constraintEnd_toStartOf="@id/rb2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_home" />

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light"
            app:layout_constraintEnd_toStartOf="@id/rb3"
            app:layout_constraintStart_toEndOf="@+id/rb1"
            app:layout_constraintTop_toBottomOf="@+id/text_home" />

        <RadioButton
            android:id="@+id/rb3"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:text="@string/ipa"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rb2"
            app:layout_constraintTop_toBottomOf="@+id/text_home" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>