<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.simplebeerapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.simplebeerapp.ui.favourite.FavouriteFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_fav" >
        <action
            android:id="@+id/action_navigation_dashboard_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_snacks"
        android:name="com.example.simplebeerapp.ui.snacks.SnacksFragment"
        android:label="@string/title_snacks"
        tools:layout="@layout/fragment_snacks" />
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.simplebeerapp.ui.home.detail.DetailFragment"
        android:label="{beerName}" >
        <argument
            android:name="id"
            app:argType="integer" />
        <argument
            android:name="beerName"
            app:argType="string" />
    </fragment>
</navigation>